--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-language: java
-jdk: oraclejdk8
 sudo: required
 services:
   - docker
@@ -17,3 +15,8 @@ before_install:
 
 script:
   - mvn clean verify -f alma-server/pom.xml -e
+
+after_success:
+  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
+  - docker images
+  - docker push thaologie/alma-server:latest
