[FRONT_END_BUILD ]  Launch the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ services:
 language: java
 jdk: oraclejdk8
 
+sudo: required
+services:
+  - docker
+
+language: java
+jdk: oraclejdk8
+
 branches:
   only:
     - master
@@ -12,8 +19,16 @@ branches:
 before_install:
   - docker version
   - docker info
+  - node --version
+  - npm --version
 
 script:
+  - cd alma-server/src/main/resources
+  - pwd
+  - npm install -g gulp
+  - npm install
+  - gulp minify
+  - cd ../../../../
   - mvn clean verify -f alma-server/pom.xml -e
 
 after_success:
