--- a/.travis.yml
+++ b/.travis.yml
@@ -5,36 +5,16 @@ services:
 language: java
 jdk: oraclejdk8
 
-sudo: required
-services:
-  - docker
-
-language: java
-jdk: oraclejdk8
-
 branches:
   only:
     - master
 
 before_install:
-  - docker version
-  - docker info
   - node --version
   - npm --version
 
 script:
-  - cd alma-server/src/main/resources
-  - pwd
-  - npm install -g gulp
-  - npm install
-  - gulp minify
-  - cd ../../../../
-  - mvn clean verify -f alma-server/pom.xml -e
-
-after_success:
-  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
-  - docker images
-  - docker push githubetes/alma-server:latest
+  - mvn clean verify -e
 
 deploy:
   provider: releases
