--- a/alma-server/pom.xml
+++ b/alma-server/pom.xml
@@ -31,7 +31,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
 		<configuration>
-			<mainClass>src.main.java.Application</mainClass>
+			<mainClass>fr.univnantes.alma.server.Application</mainClass>
 		    </configuration>
 		    <executions>
 			<execution>
