Ajout de la dépendance à la librairie de test de spring

--- a/alma-server/pom.xml
+++ b/alma-server/pom.xml
@@ -26,7 +26,6 @@
 	<docker.image.prefix>jcglalma</docker.image.prefix>
     </properties>
 
-
 	<build>
     <plugins>
             <plugin>
@@ -75,6 +74,13 @@
             </plugin>
         </plugins>
     </build>
+	
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<scope>test</scope>
+	</dependency>
+
 
 </project>
 
