--- a/alma-server/pom.xml
+++ b/alma-server/pom.xml
@@ -31,8 +31,12 @@
 
     <properties>
         <java.version>1.8</java.version>
-	<docker.image.prefix>jcglalma</docker.image.prefix>
+
+	<docker.image.prefix>jclgalma</docker.image.prefix>
+
+
     </properties>
+
 
 	<build>
     <plugins>
@@ -59,8 +63,10 @@
                             <goal>tag</goal>
                         </goals>
                         <configuration>
-                            <image>jcglalma/alma-server:${project.version}</image>
-                            <newName>hub.docker.com/jcglalma/alma-server:${project.version}</newName>
+
+                            <image>jclgalma/alma-server:${project.version}</image>
+                            <newName>hub.docker.com/jclgalma/alma-server:${project.version}</newName>
+
                         </configuration>
                     </execution>
                 </executions>
