--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,10 @@ after_success:
   - docker images
   - docker push jclgalma/alma-server:latest
 
-
-
+deploy:
+  provider: releases
+  api_key: $MY_TOKEN
+  file: alma-server/target/alma-server-1.0.0-SNAPSHOT.jar
+  skip_cleanup: true
+  on:
+    tags: true
