--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,11 @@ after_success:
   - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
   - docker images
   - docker push fungenieurs/alma-server:latest
+
+deploy:
+  provider: releases
+  api_key: "dab9ecccd649eae134079c09d58e623dc205c33d"
+  file: "Readme.md"
+  skip_cleanup: true
+  on:
+    tags: true
