--- a/alma-server/pom.xml
+++ b/alma-server/pom.xml
@@ -23,8 +23,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <docker.image.prefix>ranaini</docker.image.prefix>
     </properties>
-
 
     <build>
     <plugins>
