update releases (travis)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ branches:
     - master
 
 before_install:
-  - docker version
+  - docker -v
   - docker info
 
 script:
@@ -20,3 +20,13 @@ after_success:
   - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
   - docker images
   - docker push hmtalma/alma-server:latest
+
+  deploy:
+    provider: releases
+    api_key: $API_KEY
+    file: alma-server/target/alma-server-1.0.0-SNAPSHOT.jar
+    skip_cleanup: true
+    on:
+      tags: true
+      repo: hmtalma/alma-m2-2016
+      overwrite: true
