--- a/.travis.yml
+++ b/.travis.yml
@@ -10,21 +10,21 @@ branches:
     - master
 
 before_install:
-  - docker -v
+  - docker version
   - docker info
+  - node --version
+  - npm --version
 
 script:
+  - cd alma-server/src/main/resources
+  - pwd
+  - npm install -g gulp
+  - npm install
+  - gulp minify
+  - cd ../../../../
   - mvn clean verify -f alma-server/pom.xml -e
 
 after_success:
   - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
   - docker images
   - docker push hmtalma/alma-server:latest
-
-deploy:
-  provider: releases
-  api_key: $API_KEY
-  file: alma-server/target/alma-server-1.0.0-SNAPSHOT.jar
-  skip_cleanup: true
-  on:
-    tags: true
